--- a/3.html
+++ b/3.html
@@ -565,14 +565,14 @@
 							class="audio-button-image clickable"
 							src="nav-images/play-g79150a13d_1280.png"
 						/>
-						<h6>Stories About Love</h6>
+						<h6 style="margin:auto;">Stories About Love</h6>
 					</button>
 
 					<form>
 						<button
 							class="center-items right-nav-buttons clickable"
 							type="submit"
-							formaction="Crossword/index.html"
+							formaction="Word-Search/wordsearch.html"
 							formtarget="_blank"
 						>
 							<img
@@ -580,7 +580,7 @@
 								class="audio-button-image clickable"
 								src="nav-images/link.png"
 							/>
-							<h6>Vocabulary Crossword</h6>
+							<h6 style="margin:auto;">Vocabulary Word Search</h6>
 						</button>
 					</form>
 				</div>
