--- a/5.html
+++ b/5.html
@@ -567,7 +567,7 @@
 						class="audio-button-image clickable"
 						src="nav-images/link.png"
 					/>
-					<h6>Hidato</h6>
+					<h6 style="margin:auto;">Hidato</h6>
 						</button>
 					</form>
 
@@ -583,7 +583,7 @@
 						class="audio-button-image clickable"
 						src="nav-images/link.png"
 					/>
-					<h6>Sudoku</h6>
+					<h6 style="margin:auto;">Sudoku</h6>
 						</button>
 					</form>
 
@@ -599,7 +599,7 @@
 						class="audio-button-image clickable"
 						src="nav-images/link.png"
 					/>
-					<h6>Polygon</h6>
+					<h6 style="margin:auto;">Polygon</h6>
 						</button>
 					</form>
 
@@ -615,7 +615,7 @@
 						class="audio-button-image clickable"
 						src="nav-images/link.png"
 					/>
-					<h6>Shiritori</h6>
+					<h6 style="margin:auto;">Shiritori</h6>
 						</button>
 					</form>
 
@@ -631,7 +631,7 @@
 						class="audio-button-image clickable"
 						src="nav-images/link.png"
 					/>
-					<h6>Crossword</h6>
+					<h6 style="margin:auto;">Crossword</h6>
 						</button>
 					</form>
 
@@ -647,7 +647,7 @@
 						class="audio-button-image clickable"
 						src="nav-images/link.png"
 					/>
-					<h6>Crossword (Extras)</h6>
+					<h6 style="margin:auto;">Crossword (Extras)</h6>
 						</button>
 					</form>
 				</div>
