--- a/1.html
+++ b/1.html
@@ -142,7 +142,7 @@
 											<span class="tooltip"
 												>blossoms<span class="tooltiptext">開花 </span></span
 											>
-											can be seen all across Japan. Isesaki’s Mirai Park is well
+											can be seen all across Japan. Isesaki’s Mirai (Future) Park is well
 											known for the beautiful cherry blossoms you can see in
 											March and April. Plum blossoms are another popular tree in
 											the spring. They are slightly different than cherry
@@ -173,7 +173,7 @@
 											allergies are known as
 											<span class="tooltip"
 												>hay fever<span class="tooltiptext"
-													>hay fever
+													>花粉症
 												</span></span
 											>
 											and are mostly caused by cedar and cypress
@@ -494,25 +494,25 @@
 										<img
 											class="thumbnail1 thumbnail"
 											src="Web/1 - Pollen/alex-jones-ZAoR6t7mvoM-unsplash.jpg"
-											alt="A box of chocolates and roses"
+											alt="Cedar"
 											onclick="currentSlide1(1)"
 										/>
 										<img
 											class="thumbnail1 thumbnail"
 											src="Web/1 - Pollen/Chamaecyparis_obtusa_(Hinoki_Cypress)_(30485760183).jpg"
-											alt="White Day Gifts"
+											alt="Cypress"
 											onclick="currentSlide1(2)"
 										/>
 										<img
 											class="thumbnail1 thumbnail"
 											src="Web/1 - Pollen/1101px-Dactylis_glomerata_seedhead.jpg"
-											alt="Jajangmyeon"
+											alt="Weeds and Grasses"
 											onclick="currentSlide1(3)"
 										/>
 										<img
 											class="thumbnail1 thumbnail"
 											src="Web/1 - Pollen/8547358930_3481edcc33_o.jpg"
-											alt="Jajangmyeon"
+											alt="Dust Mites"
 											onclick="currentSlide1(4)"
 										/>
 									</div>
