--- a/Crossword/index.html
+++ b/Crossword/index.html
@@ -6,7 +6,8 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
 		/>
-		<script src="assets/scripts/jquery.js"></script>
+		<!--Use this code to embed jquery if necessary: <script src="assets/scripts/jquery.js"></script> -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
 		<link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css" />
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
