--- a/about.html
+++ b/about.html
@@ -2,10 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta
+		<!-- <meta
 			name="viewport"
 			content="width=1920, height=1080, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
-		/>
+		/>-->
+
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 		<title>Impress Magazine - Spring, 2025</title>
 		<link rel="stylesheet" href="styles.css" />
 		<link rel="icon" type="image/x-icon" href="nav-images/logo.png" />
