--- a/5.html
+++ b/5.html
@@ -8,7 +8,7 @@
 		/>-->
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		
+
 		<title>Impress Magazine - Spring, 2025</title>
 		<link rel="stylesheet" href="styles.css" />
 		<link rel="icon" type="image/x-icon" href="nav-images/logo.png" />
@@ -562,7 +562,7 @@
 						<button
 							class="center-items right-nav-buttons clickable"
 							type="submit"
-							formaction="https://sites.google.com/isesaki-school.ed.jp/impress/impress-contests/2024-haiku-contest"
+							formaction="https://drive.google.com/file/d/1PB8lXzZ_zOJwtgQZ4II9xasERYV2h07c/view?usp=drive_link"
 							formtarget="_blank"
 						>
 						<img
@@ -578,7 +578,7 @@
 						<button
 							class="center-items right-nav-buttons clickable"
 							type="submit"
-							formaction="https://sites.google.com/isesaki-school.ed.jp/impress/impress-contests/2024-haiku-contest"
+							formaction="https://drive.google.com/file/d/1PCD7jLVYTb_jFDj_Olc1R_4zOHxfAyAU/view?usp=drive_link"
 							formtarget="_blank"
 						>
 						<img
@@ -594,7 +594,7 @@
 						<button
 							class="center-items right-nav-buttons clickable"
 							type="submit"
-							formaction="https://sites.google.com/isesaki-school.ed.jp/impress/impress-contests/2024-haiku-contest"
+							formaction="https://drive.google.com/file/d/1PK4TcFe6xkgDYxJWbZeKkXo9t28JZVUY/view?usp=drive_link"
 							formtarget="_blank"
 						>
 						<img
@@ -610,7 +610,7 @@
 						<button
 							class="center-items right-nav-buttons clickable"
 							type="submit"
-							formaction="https://sites.google.com/isesaki-school.ed.jp/impress/impress-contests/2024-haiku-contest"
+							formaction="https://drive.google.com/file/d/1PE26xpShLucsYyP0rli1nnK3zxcKXGW3/view?usp=drive_link"
 							formtarget="_blank"
 						>
 						<img
@@ -626,7 +626,7 @@
 						<button
 							class="center-items right-nav-buttons clickable"
 							type="submit"
-							formaction="https://sites.google.com/isesaki-school.ed.jp/impress/impress-contests/2024-haiku-contest"
+							formaction="https://drive.google.com/file/d/1POtdwTMLopRFhyiTOEoT7FGs0Jj6NxVF/view?usp=drive_link"
 							formtarget="_blank"
 						>
 						<img
@@ -642,7 +642,7 @@
 						<button
 							class="center-items right-nav-buttons clickable"
 							type="submit"
-							formaction="https://sites.google.com/isesaki-school.ed.jp/impress/impress-contests/2024-haiku-contest"
+							formaction="https://drive.google.com/file/d/1LjjcKaq0GRGPzXB_lUjtweOSAdGUQQfO/view?usp=drive_link"
 							formtarget="_blank"
 						>
 						<img
@@ -650,7 +650,7 @@
 						class="audio-button-image clickable"
 						src="nav-images/link.png"
 					/>
-					<h6 style="margin:auto;">Crossword (Extras)</h6>
+					<h6 style="margin:auto;">Puzzles and Answers</h6>
 						</button>
 					</form>
 				</div>
