--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		/>-->
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		
+
 		<title>Impress Magazine - Spring, 2025</title>
 		<link rel="stylesheet" href="styles.css" />
 		<link rel="icon" type="image/x-icon" href="nav-images/logo.png" />
@@ -135,7 +135,7 @@
 											"
 										>
 											Hello, this is George, and thanks for reading this
-											<i>Winter, 2025</i> issue of <i>Impress</i>.
+											<i>Spring, 2025</i> issue of <i>Impress</i>.
 										</p>
 										<p
 											style="
@@ -147,9 +147,7 @@
 												text-align: justify;
 											"
 										>
-											This issue is a collection of stories about winter events.
-											Read on to learn about Jewish winter holiday traditions, a
-											pooping log, and special holidays about love.
+											In this issue, we celebrate the hidden things of spring: the pollen in the air that causes our allergies and the bugs around us that we don't think about. And we have some great puzzles from Nick for you to solve.
 										</p>
 										<p
 											style="
