--- a/about.html
+++ b/about.html
@@ -279,7 +279,7 @@
 								class="audio-button-image clickable"
 								src="nav-images/link.png"
 							/>
-							<h6>Impress Online</h6>
+							<h6 style="margin: auto">Impress Online</h6>
 						</button>
 					</form>
 
@@ -297,7 +297,43 @@
 								class="audio-button-image clickable"
 								src="nav-images/link.png"
 							/>
-							<h6>Contact Us</h6>
+							<h6 style="margin: auto">Contact Us</h6>
+						</button>
+					</form>
+
+					<form
+						action="https://sites.google.com/isesaki-school.ed.jp/impress/contact"
+						method="get"
+						target="_blank"
+					>
+						<button
+							class="center-items right-nav-buttons clickable"
+							type="submit"
+						>
+							<img
+								id="play1-3"
+								class="audio-button-image clickable"
+								src="nav-images/link.png"
+							/>
+							<h6 style="margin: auto">Privacy Policy</h6>
+						</button>
+					</form>
+
+					<form
+						action="https://sites.google.com/isesaki-school.ed.jp/impress/contact"
+						method="get"
+						target="_blank"
+					>
+						<button
+							class="center-items right-nav-buttons clickable"
+							type="submit"
+						>
+							<img
+								id="play1-3"
+								class="audio-button-image clickable"
+								src="nav-images/link.png"
+							/>
+							<h6 style="margin: auto">Terms of Use</h6>
 						</button>
 					</form>
 				</div>
