--- a/cover.html
+++ b/cover.html
@@ -178,7 +178,7 @@
 							class="audio-button-image clickable"
 							src="nav-images/play-g79150a13d_1280.png"
 						/>
-						<h6 style="text-align: center">Closing</h6>
+						<h6 style="margin: auto">Closing</h6>
 					</button>
 
 					<form
@@ -195,7 +195,7 @@
 								class="audio-button-image clickable"
 								src="nav-images/link.png"
 							/>
-							<h6>Impress Online</h6>
+							<h6 style="margin: auto">Impress Online</h6>
 						</button>
 					</form>
 
@@ -213,7 +213,7 @@
 								class="audio-button-image clickable"
 								src="nav-images/link.png"
 							/>
-							<h6>Contact Us</h6>
+							<h6 style="margin: auto">Contact Us</h6>
 						</button>
 					</form>
 				</div>
