--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
 										<h3>About This Issue</h3>
 										<p
 											style="
-												font-size: 25px;
+												font-size: 1.5rem;
 												text-align: left;
-												text-indent: 0.9vw;
+												text-indent: 1rem;
 												margin: 0.1vh;
 												padding: 1vh;
 												text-align: justify;
@@ -139,49 +139,45 @@
 										</p>
 										<p
 											style="
-												font-size: 25px;
+												font-size: 1.5rem;
 												text-align: left;
-												text-indent: 0.9vw;
+												text-indent: 1rem;
 												margin: 0.1vh;
 												padding: 1vh;
 												text-align: justify;
 											"
 										>
-											In this issue, we celebrate the hidden things of spring: the pollen in the air that causes our allergies and the bugs around us that we don't think about. And we have some great puzzles from Nick for you to solve.
+											In this issue, we celebrate the hidden things of spring:
+											the pollen in the air that causes our allergies and the
+											bugs around us that we don't think about. And we have some
+											great puzzles from Nick for you to solve.
 										</p>
 										<p
 											style="
-												font-size: 25px;
+												font-size: 1.5rem;
 												text-align: left;
-												text-indent: 0.9vw;
+												text-indent: 1rem;
 												margin: 0.1vh;
 												padding: 1vh;
 												text-align: justify;
 											"
 										>
-											Then take a look at all the different New Year's Days in
-											different cultures. The calendar year changes on January
-											first, but different countries start their own new years
-											on different days.
+											Because this issue is about hidden things, we want to
+											remind you that our lives are not only the things we see
+											and think about. For example, we spend a lot of our days
+											in schools, doing homework, or using our phones, but do
+											you spend a lot of time folding clothes, washing dishes,
+											or cleaning the house? If you think about it, there are a
+											lot of people doing things for us all the time. Spring is
+											the season for Mother's Day and Father's Day, so remember
+											to say thank you to the people you care about for all the
+											good things that they do.
 										</p>
 										<p
 											style="
-												font-size: 25px;
+												font-size: 1.5rem;
 												text-align: left;
-												text-indent: 0.9vw;
-												margin: 0.1vh;
-												padding: 1vh;
-												text-align: justify;
-											"
-										>
-											Last, take a look at some of the excellent haiku poems
-											students and teachers wrote for us!
-										</p>
-										<p
-											style="
-												font-size: 25px;
-												text-align: left;
-												text-indent: 0.9vw;
+												text-indent: 1rem;
 												margin: 0.1vh;
 												padding: 1vh;
 												text-align: justify;
@@ -206,7 +202,6 @@
 				</div>
 
 				<div class="item sidebar sidebar-right">
-					
 					<!-- Buttons for Intro Text -->
 					<button
 						class="center-items right-nav-buttons clickable"
@@ -218,7 +213,7 @@
 							class="audio-button-image clickable"
 							src="nav-images/play-g79150a13d_1280.png"
 						/>
-						<h6 style="text-align: center">Introduction</h6>
+						<h6 style="margin: auto">Introduction</h6>
 					</button>
 				</div>
 			</div>
