--- a/apps/Word-Search/wordsearch.html
+++ b/apps/Word-Search/wordsearch.html
@@ -4,6 +4,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Word Search Game</title>
+		<link rel="icon" type="image/x-icon" href="../../assets/nav-images/logo.png" />
+		<link id="favicon" rel="shortcut icon" href="../../assets/nav-images/logo.png" />
 	</head>
 	<body>
 		<div class="header">
