--- a/3.html
+++ b/3.html
@@ -908,7 +908,7 @@
 							<img
 								id="play1-2"
 								class="audio-button-image clickable"
-								src="/assets/nav-images/link.png"
+								src="/assets/nav-images/play-g79150a13d_1280.png"
 							/>
 							<h6 style="margin: auto">Vocabulary Word Search</h6>
 						</button>
