--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
 									English Media.
 								</p>
 							</div>
-							<div class="about-grid-item" style="flex-grow: 2;">
+							<div class="about-grid-item">
 								<h3 style="text-align: center">Privacy and Terms of Use</h3>
 
 								<p class="credit-text">
