--- a/apps/Crossword/index.html
+++ b/apps/Crossword/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Crossword Puzzle</title>
+		<link rel="icon" type="image/x-icon" href="/assets/nav-images/logo.png" />
+		<link id="favicon" rel="shortcut icon" href="/assets/nav-images/logo.png" />
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
