--- a/1.html
+++ b/1.html
@@ -575,7 +575,7 @@
 							<img
 								id="play1-2"
 								class="audio-button-image clickable"
-								src="/assets/nav-images/link.png"
+								src="/assets/nav-images/play-g79150a13d_1280.png"
 							/>
 							<h6 style="margin: auto">Vocabulary Crossword</h6>
 						</button>
