--- a/index.html
+++ b/index.html
@@ -144,9 +144,10 @@
 												text-align: justify;
 											"
 										>
-											In this issue, we celebrate the hidden things of spring:
-											the pollen in the air that causes our allergies and the
-											bugs around us that we don't think about. And we have some
+											In this issue, we celebrate the hidden things of spring.
+											We have an article from Lloyd about the pollen in the air
+											that causes our allergies and something about the bugs
+											around us that we don't think about. And we have some
 											great puzzles from Nick for you to solve.
 										</p>
 										<p
